hphp/hack/test/typecheck/do_typechange.php.exp
File "do_typechange.php", line 17, characters 10-11:
Invalid return type (Typing[4110])
File "do_typechange.php", line 12, characters 24-26:
Expected int
File "do_typechange.php", line 15, characters 10-13:
But got null
