hphp/hack/test/typecheck/do_typechange.php
<?hh // strict
/**
 * Copyright (c) 2014, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the "hack" directory of this source tree.
 *
 *
 */

function foo(bool $b): int {
  $x = 10;
  do {
    $x = null;
  } while($b);
  return $x;
}
